  * apt-pkg/contrib/mmap.cc:
    - have a dummy SyncToFd around in case of ReadOnly access to a
      compressed file as we otherwise on Close() do not delete[] the
      char buffer but munmap() it… (Closes: #673815)
  * debian/control:
    - moving debiandoc-sgml to Build-Depends-Indep was one step too much
      for the buildds as we still build two sgml files in arch:any

 -- David Kalnischkies <kalnischkies@gmail.com>  Mon, 21 May 2012 15:10:49 +0200

apt (0.9.4) unstable; urgency=low

  [ David Kalnischkies ]
  * methods/http.cc:
    - after many years of pointless discussions disable http/1.1 pipelining
      by default as many webservers and proxies seem to be unable to conform
      to specification must's (rfc2616 section 8.1.2.2) (LP: #996151)
    - add spaces around PACKAGE_VERSION to fix FTBFS with -std=c++11
  * apt-pkg/pkgcachegen.cc:
    - make IsDuplicatedDescription static so that it is really private
      as we don't need a symbol for it as it is not in a header
  * Makefile, buildlib/*.mak:
    - reshuffle dependencies so that parallel building seems to work
    - separate manpages from the rest of the doc building
  * prepare-release:
    - apt-inst version isn't apt versions, so don't override variable
  * debian/rules:
    - apt-utils packages manpages, so it should depend on build-doc
    - make apt and apt-utils packages depend on manpages instead of full doc
  * debian/control:
    - move doxygen and debiandoc-sgml to Build-Depends-Indep as docs
      are no longer build in the same target as the manpages
  * apt-pkg/acquire-methods.cc:
    - factor out into private Dequeue() to fix access to deleted pointer
  * apt-pkg/contrib/fileutl.cc:
    - ensure that we close compressed fds, wait for forks and such even if
      the FileFd itself is set to not autoclose the given Fd
  * cmdline/apt-get.cc:
    - use the host architecture, not the build architecture for matching
      of [architecture restrictions] in Build-Depends (Closes: #672927)