@@ -14,6 +14,9 @@ apt (0.9.5) UNRELEASED; urgency=low
   * debian/control:
     - moving debiandoc-sgml to Build-Depends-Indep was one step too much
       for the buildds as we still build two sgml files in arch:any
+  * debian/rules:
+    - move internal-solver as 'apt' to his friend dump-solver in
+      /usr/lib/apt/solvers to avoid writing a manpage for it
 
  -- David Kalnischkies <kalnischkies@gmail.com>  Mon, 21 May 2012 15:10:49 +0200
 
